updates almost complete - still need to write data access layer for rep get
