# swagger.yaml
@@ -1,20 +1,16 @@
 openapi: 3.0.0
 info:
   description: >-
-    This is the MailMyVoice postcard payment service which utilizes <a href="stripe.com">stripe.com</a> for multiple payment method processing. This is a serverside token processing service, so all Stripe payment methods which utilzes tokens should be supported. Consult <a href="https://stripe.com/docs">here</a> for information on what kinds of payments can be processed.
+    This is the MailMyVoice civic service which proxies the google civic API. The service caches the api to avoid too many requests to google.
   version: 2.0.0
-  title: MailMyVoice.com Payment Service by United Effects
+  title: MailMyVoice.com Civic Service by United Effects
   contact:
     email: borzou@theboeffect.com
 tags:
   - name: logs
     description: Logging endpoints
-  - name: charge
-    description: Charging a payment
-  - name: receipts
-    description: Reviewing payment and receipt records
-  - name: event
-    description: Triggered using an auth code
+  - name: civic
+    description: Civic Proxy
 paths:
   /logs:
     post:
@@ -142,188 +138,9 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/defaultError'
-  /payment/process:
-    post:
-      tags:
-        - event
-      summary: Trigger postcards via mailer service for any payment not processed.
-      description: Trigger postcards via mailer service for any payment not processed.
-      parameters:
-        - name: code
-          in: query
-          description: webhook code to trigger event
-          schema:
-            type: string
-      responses:
-        '200':
-          description: successful operation
-        '405':
-          description: Invalid input
-        '500':
-          description: Unknown error
-  /payment:
-    get:
-      tags:
-        - receipts
-      summary: Get All payments and receipts.
-      description: Get All payments and receipts.
-      parameters:
-        - name: userId
-          in: query
-          description: filter on User ID
-          schema:
-            type: string
-        - name: email
-          in: query
-          description: filter on Email
-          schema:
-            type: string
-        - name: state
-          in: query
-          description: 'filter on state - new or processed'
-          schema:
-            type: string
-        - name: extReceiptId
-          in: query
-          description: all postcards associated to a single receipt ID
-          schema:
-            type: string
-      responses:
-        '200':
-          description: GET successful
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/paymentResopnseObject'
-        '401':
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/defaultError'
-        '500':
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/defaultError'
-      security:
-        - UEAuth: []
-    post:
-      tags:
-        - charge
-      summary: Charging using a token via Stripe API
-      description: Charging using a token via Stripe API. This endpoint lets you process any token from stripe which inherently means any payment type which uses a token. For a list of payment types supported see <a href="https://stripe.com/docs">here</a>.
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/paymentObject'
-        '405':
-          description: Invalid input
-        '500':
-          description: Unknown error
-      security:
-        - UEAuth: []
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/chargeObject'
-        description: Log data to be written
-        required: true
-  /my/payment:
-    get:
-      tags:
-        - receipts
-      summary: Get All your payments and receipts.
-      description: Get All your payments and receipts.
-      parameters:
-        - name: email
-          in: query
-          description: filter on Email
-          schema:
-            type: string
-        - name: state
-          in: query
-          description: 'filter on state - new or processed'
-          schema:
-            type: string
-        - name: extReceiptId
-          in: query
-          description: all postcards associated to a single receipt ID
-          schema:
-            type: string
-      responses:
-        '200':
-          description: GET successful
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/paymentResopnseObject'
-        '401':
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/defaultError'
-        '500':
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/defaultError'
-      security:
-        - UEAuth: []
-  /payment/{guid}:
-    get:
-      tags:
-        - receipts
-      summary: Get one payment and receipt.
-      description: Get one payment and receipt.
-      parameters:
-        - name: guid
-          in: path
-          description: GUID of payment to find
-          schema:
-            type: string
-        - name: pcSessionId
-          in: query
-          description: used to retrieve a payment by guid if you are not logged in
-          schema:
-            type: string
-      responses:
-        '200':
-          description: GET successful
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/singlePaymentResponse'
-        '401':
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/defaultError'
-        '404':
-          description: Not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/defaultError'
-        '500':
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/defaultError'
-      security:
-        - UEAuth: []
 servers:
-  - url: 'http://localhost:3003/api'
-  - url: 'https://localhost:3003/api'
+  - url: 'http://localhost:4050/api'
+  - url: 'https://localhost:4050/api'
 components:
   securitySchemes:
     UEAuth:
@@ -385,88 +202,3 @@ components:
           format: int32
         data:
           type: string
-    chargeObject:
-      required:
-        - amount
-        - postcards
-        - stripeToken
-        - stripeTokenType
-        - email
-      properties:
-        amount:
-          type: integer
-          format: int32
-          description: Amount in cents to charge. This should match the calculated value.
-        pcSessionId:
-          type: string
-          description: Required if the user isn't logged in
-        userId:
-          type: string
-          description: If this is anon user and you are tracking IDs externally, set it here.
-        postcards:
-          type: array
-          items:
-            type: string
-        discountCode:
-          type: string
-          description: pending funcitonality. ignore for now
-        stripeToken:
-          type: string
-          description: From Stripe API
-        stripeTokenType:
-          type: string
-          enum: ['card']
-        stripeEmail:
-          description: Email address of person making payment (internally this is simplified to "email")
-          type: string
-    paymentResopnseObject:
-      properties:
-        type:
-          type: string
-          enum: ['Payment']
-        data:
-          type: array
-          items:
-            type: object
-            $ref: '#/components/schemas/paymentObject'
-    singlePaymentResponse:
-      properties:
-        type:
-          type: string
-          enum: ['Payment']
-        data:
-          type: object
-          $ref: '#/components/schemas/paymentObject'
-    paymentObject:
-      properties:
-        created:
-          type: string
-          format: date-time
-        guid:
-          type: string
-          description: unique GUID for the payment object. different from receiptId
-        userId:
-          type: string
-          description: ID of the user making payment
-        email:
-          type: string
-          description: Email address of the person making payment
-        pcSessionId:
-          type: string
-          description: Unique session ID provided by an anon user
-        postcards:
-          type: array
-          items:
-            type: string
-            description: GUIDs of postcards associated to this transaction
-        state:
-          type: string
-          default: 'new'
-          enum: ['new', 'processed']
-          description: To help track when postcards are actually triggered or not from the payment
-        extReceiptId:
-          type: string
-          description: The ID associated to the receipt denormalized to the root.
-        receipt:
-          type: object
-          description: The receipt from a sale through a charge provider. Currently only stripe is supported
